Add multicluster to project level
