# app/schemas/project.py
@@ -23,6 +23,7 @@ class ProjectSchema(Schema):
     project_type = fields.String()
     date_created = fields.Date(dump_only=True)
     age = fields.Method("get_age", dump_only=True)
+    is_multicluster = fields.Boolean()
 
     def get_age(self, obj):
         return get_item_age(obj.date_created)
